--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dotlottie/react-player": "^1.6.19",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "isomorphic-dompurify": "^3.0.0",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "react": "19.2.3",
@@ -22,6 +23,7 @@
     "@netlify/plugin-nextjs": "^5.15.8",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
